# datacom

./: Cargo.toml  README.md  check.m
c_src/: Makefile  a5_1_2.c  xtea.c
ml_src/: datacom-ml.opam  dune
ml_src/src/: .merlin  dune  kschedeq.ml  main.ml  md2.ml
src/: a52.rs  bits.rs  block_cipher.rs  bracket.rs  des.rs  gate_soup.rs  junk.rs  machine.rs  main.rs  poly.rs  quadratic_estimator.rs  register.rs  show_regs.rs  tea.rs  tea_model.rs  test_distinguisher.rs  test_machine.rs  test_revealer.rs  trivial_xor_model.rs  utils.rs  xorwow.rs  xtea.rs
