[package]
name = "datacom"
version = "0.1.0"
authors = ["Berke Durak <bd@exhrd.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cryptominisat = { path = "/home/berke/src/cryptominisat-rs/" }
#cryptominisat = { git = "https://github.com/msoos/cryptominisat-rs", branch= "master" }

# [[bin]]
# name = "des"
# path = "src/des.rs"

[[bin]]
name = "test_machine"
path = "src/test_machine.rs"

[[bin]]
name = "show_regs"
path = "src/show_regs.rs"

[[bin]]
name = "test_revealer"
path = "src/test_revealer.rs"